# arcadis

./: Cargo.toml  PR_DESCRIPTION.md  package-lock.json  package.json
.github/workflows/: engine-ci.yml
apps/contracts/: Cargo.toml
apps/contracts/contracts/game-review-contract/: Cargo.toml  Makefile
apps/contracts/contracts/game-review-contract/src/: lib.rs  test.rs
apps/contracts/contracts/game-review-contract/test_snapshots/test/: test_add_review_duplicate_user.1.json  test_add_review_empty_comment.1.json  test_add_review_large_comment.1.json  test_add_review_multiple_users.1.json  test_add_review_valid.1.json  test_get_game_rating_rounding.1.json  test_has_reviewed.1.json  test_user_reviewing_multiple_games.1.json
apps/contracts/contracts/game-review/src/: errors.rs  test.rs
apps/contracts/contracts/game-review/test_snapshots/test/: test_add_review_duplicate_fails.1.json  test_add_review_invalid_rating.1.json  test_add_review_success.1.json  test_empty_and_max_length_comment.1.json  test_get_game_review_count_and_rating.1.json  test_get_reviews_pagination.1.json  test_has_reviewed_true_false.1.json  test_multiple_users_and_games.1.json
apps/contracts/contracts/game_leaderboards_contract/: Cargo.toml
apps/contracts/contracts/game_leaderboards_contract/src/: errors.rs  leaderboard.rs  lib.rs  scores.rs  tournaments.rs  types.rs
apps/contracts/contracts/game_state_management/: Cargo.toml
apps/contracts/contracts/game_state_management/src/: events.rs  save.rs  world.rs
apps/engine/: .gitignore  Cargo.toml  ENGINE_SETUP.md  README.md
apps/engine/ci/: test_workflow.sh
apps/engine/contracts/game/: Cargo.toml  IMPLEMENTATION.md
apps/engine/contracts/game/src/: components.rs  lib.rs  storage.rs  systems.rs
apps/engine/docs/: ecs.md  testing.md
apps/engine/ecs/: Cargo.toml
apps/engine/ecs/src/: lib.rs
apps/engine/examples/ecs-test/: Cargo.toml
apps/engine/examples/ecs-test/src/: lib.rs  test.rs
apps/engine/examples/ecs-test/test_snapshots/test/: test_movement_system.1.json
apps/engine/scripts/: setup.sh  test.sh
apps/engine/src/: lib.rs
apps/engine/test_snapshots/combat_system_tests/: test_combat_system_basic_attack.1.json  test_combat_system_entity_death.1.json  test_combat_system_health_underflow_protection.1.json  test_combat_system_multiple_attacks.1.json
apps/engine/test_snapshots/contract_initialization_tests/: test_contract_initialization.1.json  test_multiple_initialization.1.json
apps/engine/test_snapshots/entity_management_tests/: test_entity_creation.1.json  test_entity_despawning.1.json  test_entity_health_retrieval.1.json  test_entity_position_retrieval.1.json
apps/engine/test_snapshots/error_handling_tests/: test_edge_case_maximum_entity_ids.1.json  test_operations_on_dead_entities.1.json  test_operations_on_nonexistent_entities.1.json
apps/engine/test_snapshots/integration_tests/: test_full_gameplay_scenario.1.json  test_many_entities_stress_test.1.json
apps/engine/test_snapshots/movement_system_tests/: test_movement_system_basic_movement.1.json  test_movement_system_large_coordinates.1.json  test_movement_system_negative_boundary.1.json  test_movement_system_zero_movement.1.json
apps/engine/test_snapshots/world_state_tests/: test_empty_world_behavior.1.json  test_entity_id_uniqueness.1.json  test_world_state_consistency.1.json
apps/engine/tests/: README.md  ecs.rs  game.rs  workflow_test.rs
apps/marketplace/: README.md
apps/marketplace/src/app/: layout.tsx  page.tsx
apps/marketplace/src/app/games/: page.tsx
apps/marketplace/src/app/sign-in/: page.tsx
apps/marketplace/src/components/common/: Footer.tsx  Navbar.tsx
apps/marketplace/src/components/dashboard/ui/: MyGameTable.tsx  StatsCard.tsx
apps/marketplace/src/components/games/: FilterDropdown.tsx  SearchBar.tsx
apps/marketplace/src/components/landing/: Header.tsx
apps/marketplace/src/components/ui/: GameCard.tsx
apps/marketplace/src/lib/games/: filters.ts
apps/webapp/: package.json  tailwind.config.ts
apps/webapp/app/: page.tsx
apps/webapp/app/community/: page.tsx
apps/webapp/app/constants/: games.constants.ts
apps/webapp/app/games/[slug]/: page.tsx
apps/webapp/app/governance/: page.tsx
apps/webapp/app/hooks/: useSorobanContract.ts  useVoting.ts  useWallet.tsx
apps/webapp/app/soroban/: votingContract.ts
apps/webapp/components/: Header.tsx  StatsSection.tsx  TournamentLists.tsx  WalletConnectButton.tsx
apps/webapp/components/games/: GameCatalog.tsx
apps/webapp/components/ui/: GameCard.tsx  tournamentLists.tsx
apps/webapp/context/: WalletProvider.tsx  walletContext.tsx
apps/webapp/lib/soroban/: README.md  package.json  votingContract.ts
apps/webapp/lib/soroban/src/: index.ts
