[workspace]
resolver = "2"
members = [
  "apps/contracts/contracts/*",
  "apps/engine",
  "apps/engine/ecs",
  "apps/engine/examples/*",
]

[workspace.dependencies]
soroban-sdk = "20.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.dev]
panic = "abort" 