[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true }
wee_alloc = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
