[package]
name = "ecs-test"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "20.0.0", default-features = false }
stellar-xdr = { version = "20.0.0", default-features = false, features = ["next"] }
soroban-ecs = { path = "../../ecs" }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"], default-features = false }

[lib]
crate-type = ["cdylib"]
